[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
exclude = ["README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
petgraph = "0.6.2"
regex = "1.7.0"
