[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
exclude = ["README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
petgraph = "0.6.2"
regex = "1.7.0"
